crates/strider-analyze/tests/snapshots/v3__aarch64__floats__f32_compare.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ unique[0x3cc00]:4", shape=house, fillcolor="#163030"];
  "10" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="φ OV", shape=house, fillcolor="#163030"];
  "5" -> "26" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="φ NG", shape=house, fillcolor="#163030"];
  "5" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Less\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "35" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="φ ZR", shape=house, fillcolor="#163030"];
  "5" -> "37" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "39" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "32" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "25" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
}
